fixed font size of nav-links on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -370,7 +370,7 @@ footer h2 {
   }
 
   .nav-link {
-    font-size: 15px;
+    font-size: 3em;
   }
 
   .section-header {
